more debugging; things seem reasonable except for homopolymers yielding consecurive identical kmers bug